// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package grpc;
option go_package = "app/protos";

message UploadPhotoRequest {
  string obj_name = 1;
  bytes image = 2;
}

message UploadPhotoResponse {}

message CreateMetadataRequest {
  string obj_name = 1;
  string user = 2;
  repeated string hashtags = 3;
}

message CreateMetadataResponse {}

service UploadPhoto {
  /*
   * RPC for upload a photo to the image database
   */
  rpc Upload(UploadPhotoRequest) returns (UploadPhotoResponse);

  /*
   * RPC for create hashtag-image mapping in the metadata database
   */
  rpc CreateMetadata(CreateMetadataRequest) returns (CreateMetadataResponse);
}
